# py_experiments

./: .env.example  .gitignore  main.py  pyproject.toml
01_concepts/: 00_comments.ipynb  01_blocks.ipynb  02_vars.ipynb  03_operators.ipynb  04_instructions.ipynb  05_contitions.ipynb  06_falsy.ipynb  07_cycles.ipynb  08_sequences.ipynb  09_scopes.ipynb  10_functions.ipynb  11_iter_gen.ipynb  12_closures.ipynb  13_decorators.ipynb  14_errors.ipynb  15_files.ipynb  16_modules.ipynb  17_packs.ipynb  18_magic.ipynb  19_io.ipynb  20_ctx_mgr.ipynb  21_gc.ipynb  22_oop.ipynb  _math_utils.py
01_concepts/_data_types/: None.ipynb  _format_strings.ipynb  _type_convert.ipynb  bool.ipynb  complex.ipynb  dict.ipynb  enumerate.ipynb  float.ipynb  function.ipynb  int.ipynb  list.ipynb  range.ipynb  set.ipynb  str.ipynb  tuple.ipynb
02_sql/: 00_notes.ipynb  _alembic.ipynb
02_sql/01_sqlite/: 01_basic.ipynb
02_sql/02_sqlalchemy/: 01_core.ipynb  02_orm.ipynb  03_relationships.ipynb  _notes.ipynb
03_libs/: base64.ipynb  bs4.ipynb  click.ipynb  coverage.ipynb  docxtpl.ipynb  faker.ipynb  matplotlib.ipynb  passlib.ipynb  pydantic-settings.ipynb  pydub.ipynb  pync.ipynb  python-dotenv.ipynb  requests.ipynb  rich.ipynb  selenuim.ipynb
03_libs/django_/: 00_basic.ipynb  01_urls.ipynb  02_models.ipynb  03_admin.ipynb  04_ORM.ipynb  05_views.ipynb  06_templates.ipynb  07_forms.ipynb
03_libs/docxtpl_/: template.docx
03_libs/fastapi_/: 00_basic.ipynb  01_file_structure.ipynb  02_params.ipynb  03_validation.ipynb  04_routes.ipynb  05_response.ipynb  06_auth.ipynb  _http_headers.ipynb
03_libs/streamlit_/: 01_install_run.ipynb  02_working_with_data.ipynb  03_plots.ipynb  04_elements.ipynb  05_workflow.ipynb  06_widgets.ipynb  07_pages.ipynb
03_libs/textual_/: 01_run.ipynb
04_builtin/: aiohttp.ipynb  array.ipynb  asyncio.ipynb  calendar.ipynb  copy.ipynb  dataclasses.ipynb  datetime.ipynb  datetime.timedelta.ipynb  decimal.ipynb  dis.ipynb  enum.ipynb  fraction.ipynb  hashlib.ipynb  inspect.ipynb  itertools.ipynb  json.ipynb  locale.ipynb  logging.ipynb  math.ipynb  os.ipynb  os_path.ipynb  pathlib.ipynb  pprint.ipynb  random.ipynb  re.ipynb  shutil.ipynb  sys.ipynb  tempfile.ipynb  time.ipynb  timeit.ipynb  turtle.ipynb  typing.ipynb  urllib.ipynb
04_builtin/asyncio_/: 01_awaitable.ipynb  02_gather_TG.ipynb  03_timeout_wait.ipynb  _notes.ipynb
05_tests/: 01_assert.py  02_doctest.py  03_unittest.ipynb  04_tdd.ipynb  05_pytest.ipynb  _mock.ipynb
06_sql/: _core.py
06_sql/queries/: 01_create_database.sql  02_create_tables.sql  03_insert.sql  04_select.sql  08_select_order.sql  10_update.sql  11_comment.sql  15_date_time.sql  18_array.sql
_tools/: uv.ipynb
_tools/tmp/: compose.yaml  main.py  tmp.yml
other/mermaid/: flowchart.md  other_graphs.md
practice/apps/: file_organizer.py
practice/async_fastapi_sqlalchemy/: alembic.ini  main.py  settings.py
practice/builtin/: dataclasses_.py  (+4 more)
(+276 files in other folders)
