[project]
name = "py-experiments"
version = "0.1.0"
description = "My experiments with Python"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "coverage>=7.10.7",
    "docxtpl>=0.20.1",
    "fastapi>=0.117.1",
    "ipython-sql>=0.5.0",
    "ipywidgets>=8.1.7",
    "pydantic-settings>=2.10.1",
    "pync>=2.0.3",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "uvicorn[standard]>=0.36.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]

[tool.ruff]
exclude = [
    ".git",
    ".vscode",
    ".ruff_cache",
    ".venv",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
