[project]
name = "py-experiments"
version = "0.1.0"
description = "My experiments with Python"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accessify>=0.3.1",
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bs4>=0.0.2",
    "click>=8.2.1",
    "coverage>=7.10.7",
    "django>=5.2.7",
    "docxtpl>=0.20.1",
    "faker>=37.8.0",
    "fastapi>=0.117.1",
    "ipython-sql>=0.5.0",
    "ipywidgets>=8.1.7",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "passlib>=1.7.4",
    "playwright>=1.55.0",
    "plotly>=6.3.1",
    "pydantic-settings>=2.10.1",
    "pydub>=0.25.1",
    "pympler>=1.1",
    "pync>=2.0.3",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "selenium>=4.35.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "streamlit>=1.49.1",
    "uvicorn[standard]>=0.36.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "ruff>=0.12.11",
]

[tool.ruff]
exclude = [
    ".git",
    ".vscode",
    ".ruff_cache",
    ".venv",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
